Fix-[Index] Fallback for h2 to monospace

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             
             background-color: black;
             color: white;
-            font-family: 'AndaleMonoMTStd';
+            font-family: 'AndaleMonoMTStd', monospace;
             
             height: 100%;
             width: 100%;
