--- a/index.html
+++ b/index.html
@@ -39,10 +39,30 @@
         h2 {
             margin-block-start: 1em;
         }
+
+        nav {
+            margin-block-start: 0.95em;
+        }
+
+        nav a {
+            font-size: 1.75em;
+            color: white;
+            text-decoration: none;
+        }
+
+        nav a:not(:last-child) {
+            margin-inline-end: 0.3em;
+        }
     </style>
 </head>
 <body>
     <img src="./assets/img/logo.svg" alt="Podcastless">
     <h2>coming soon…</h2>
+    <nav>
+        <a href="https://facebook.com/podcastless"><i class="fab fa-facebook"></i></a>
+        <a href="https://instagram.com/podcastless"><i class="fab fa-instagram"></i></a>
+        <a href="https://twitter.com/podcastless"><i class="fab fa-twitter"></i></a>
+    </nav>
 </body>
+<script src="https://kit.fontawesome.com/b0121318f1.js" crossorigin="anonymous"></script>
 </html>
