[Index] Increased title to h1

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="assets/img/logo.png">
-    
+    <link rel="icon" type="image/svg+html" href="assets/img/logo.svg">
+
     <title>Podcastless</title>
     <style>
         @font-face {
@@ -36,7 +36,8 @@
             max-height: 30%;
         }
 
-        h2 {
+        h1 {
+            font-size: 2.25em;
             margin-block-start: 1em;
         }
 
@@ -57,7 +58,7 @@
 </head>
 <body>
     <img src="./assets/img/logo.svg" alt="Podcastless">
-    <h2>coming soon…</h2>
+    <h1>coming soon…</h2>
     <nav>
         <a href="https://facebook.com/podcastless"><i class="fab fa-facebook"></i></a>
         <a href="https://instagram.com/podcastless"><i class="fab fa-instagram"></i></a>
